# personal-bot

./: .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  main.py  manage.py  pyproject.toml
bot/: models.py  service.py  urls.py  views.py
bot/migrations/: 0001_initial.py  0002_record_created_at_record_updated_at_tag_created_at_and_more.py  0003_inteligence.py
bot/templates/bot/: chat.html
bot/templates/bot/partials/: message.html
nginx/: nginx.conf
personal_bot/: asgi.py  settings.py  urls.py  wsgi.py
