[project]
name = "personal-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.3",
    "django-filter>=25.2",
    "djangorestframework>=3.17.0",
    "gunicorn>=25.1.0",
    "markdown>=3.10.2",
    "psycopg>=3.3.3",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]
